# cns-zetaferno-ts

./: .gitignore  .hgignore  CONTRIBUTING.md  README.md  gen_doxygen  guess.sh  guess_to_perl.sh  trc.sh  trc_mv  trc_update
conf/: builder.conf  builder.part.linux.platform  opts.ts  tester.conf
conf/cs/: zetaferno-ts.yml
conf/scripts/: def-core-watchers  zetaferno-ts
scripts/: guess.sh  run.sh
talib_zetaferno_ts/: meson.build  rpc.c  rpc_alts.c  rpc_ds.c  rpc_muxer.c  rpc_tcp.c  rpc_udp_rx.c  rpc_udp_tx.c  zf_rpc.h  zfrpc.x.m4
talib_zetaferno_ts/include/: zf_talib_common.h  zf_talib_internal.h  zf_talib_namespace.h
trc/: bnbvalue.xml  globals.xml  multicast.xml  muxer.xml  overlapped.xml  performance.xml  tcp.xml  timestamps.xml  top.xml  udp_rx.xml  udp_tx.xml  zf_alt.xml  zf_ds.xml
zetaferno-ts/: Doxyfile  epilogue.c  mainpage.dox  meson.build  package.xml  prologue.c
zetaferno-ts/bnbvalue/: bad_address.c  bad_endpoints_limit.c  meson.build  package.dox  package.xml  too_many_stacks_kill.c
zetaferno-ts/doc/: zf_tests.yml
zetaferno-ts/doc/dox_resources/: DoxygenLayout.xml  overview.dox  refs.dox  tags.dox  terminology.dox  tester_reqs.dox
zetaferno-ts/lib/: meson.build  rpc_zf.c  rpc_zf.h  rpc_zf_alts.c  rpc_zf_alts.h  rpc_zf_ds.c  rpc_zf_ds.h  rpc_zf_internal.c  rpc_zf_internal.h  rpc_zf_muxer.c  rpc_zf_muxer.h  rpc_zf_tcp.c  rpc_zf_tcp.h  rpc_zf_udp_rx.c  rpc_zf_udp_rx.h  rpc_zf_udp_tx.c  rpc_zf_udp_tx.h  zetaferno_ts.c  zetaferno_ts.h  zf  zf_test.h  zfts_alt.h  zfts_muxer.c  zfts_muxer.h  zfts_tcp.c  zfts_tcp.h  zfts_zfur.c  zfts_zfur.h  zfts_zfut.c  zfts_zfut.h
zetaferno-ts/multicast/: check_addresses.c  meson.build  package.dox  package.xml
zetaferno-ts/muxer/: double_event.c  events_on_freed_muxer.c  gone_event.c  iomux_stack_activity.c  meson.build  mod_event_recharge.c  mod_events.c  muxer_free_zocket.c  muxer_in.c  muxer_inout.c  muxer_out.c  muxer_set_release.c  package.dox  package.xml  tcp_connect.c  tcp_shutdown.c  two_muxers.c  two_zockets_del.c  udp_out.c  zf_waitable_event.c
zetaferno-ts/overlapped/: meson.build  package.dox  package.xml  recv_pftf.c  recv_pftf_bad_csum.c  recv_pftf_two_muxer.c
zetaferno-ts/overlapped/lib/: meson.build  overlapped_lib.c  overlapped_lib.h
zetaferno-ts/performance/: altpingpong.c  meson.build  package.dox  package.xml  prologue.c  tcppingpong.c  udppingpong.c
zetaferno-ts/performance/lib/: meson.build  performance_lib.c  performance_lib.h
zetaferno-ts/tcp/: bind_address_types.c  bind_twice.c  connect_after_fault.c  delayed_ack.c  endpoints_limit.c  incomplete_connect.c  listen_address_types.c  listen_backlog.c  listen_reuse_laddr.c  listen_share_stack.c  listeners_limit.c  locked_rx_buffers.c  meson.build  msg_more.c  package.dox  package.xml  reactor_recv_event.c  recv_buffer_overfilling.c  send_buffer_overfilling.c  share_events_queue.c  sleep_after_stack_alloc.c  tcp_active.c  tcp_passive.c  two_active_zockets.c  unaccepted_endpoints_limit.c  wait_for_time_wait.c  zc_read_buffers.c  zc_recv_done_some.c  zft_handle.c  zft_send_buffers.c  zft_send_space.c  zockets_release.c
zetaferno-ts/timestamps/: alloc_stack_sleep_connect.c  epilogue.c  meson.build  package.dox  package.xml  prologue.c  tcp_rx.c  tcp_tx.c  tcp_tx_retransmit.c  timestamps.c  timestamps.h  udp_rx.c  udp_tx.c  udp_tx_drop.c
zetaferno-ts/udp_rx/: bind_address_types.c  bind_twice.c  buffers_number.c  endpoints_limit.c  events_queue.c  locked_buffers.c  meson.build  multiple_bind.c  multiple_bind_intensive.c  multiple_unbind.c  overfill_receive_queue.c  package.dox  package.xml  recv_dgram.c  zockets_release.c
zetaferno-ts/udp_tx/: address_reusing.c  bind_address_types.c  endpoints_limit.c  events_sharing.c  laddr_inaddr_any.c  meson.build  package.dox  package.xml  send_dgram.c  send_recv_flooding.c  zc_recv_send.c  zfut_send_max_mss.c  zockets_release.c
zetaferno-ts/zf_alt/: alt_overfill.c  alt_overfill_param.c  alt_release.c  alt_reuse.c  fill_bufs.c  invalid_alt_attr_bufs.c  many_zft.c  meson.build  no_ack.c  no_extra_data.c  package.dox  package.xml  peer_close.c  prologue.c  queue_mult.c  zft_alt_sample.c  zft_alt_send.c  zft_mixed_send.c  zft_shutdown.c  zft_tst_send.c
zetaferno-ts/zf_ds/: bad_socket.c  complete_overfill.c  complete_too_much.c  extend_ds_win.c  meson.build  nocwin.c  nowin.c  package.dox  package.xml  push_flag.c  sendq_busy.c  simple_ds.c  small_header.c
zetaferno-ts/zf_ds/lib/: meson.build  zf_ds_test.c  zf_ds_test.h
